--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ function draw()
   	gl.clearColor(0.0, 0.0, 0.0, 1.0);
   	gl.clear(gl.COLOR_BUFFER_BIT);
     gl.enable(gl.DEPTH_TEST);
-    gl.depthFunc(gl.LESS);
+    gl.depthFunc(gl.LEQUAL);
 
     // ------ 
     gl.useProgram(program);
