--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WebGL Basics part 4</title>
+    <title>WebGL Elite</title>
 
     <script type='text/javascript'>
 
