--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ function draw()
 
   	// Sets clear color to non-transparent dark blue and clears context
   	gl.clearColor(0.0, 0.0, 0.0, 1.0);
-  	gl.clear(gl.COLOR_BUFFER_BIT);
+  	gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
     gl.enable(gl.DEPTH_TEST);
     gl.depthFunc(gl.LEQUAL);
 
