--- a/wspace/index.html
+++ b/wspace/index.html
@@ -17,9 +17,10 @@
 		</script>
 		<script src="smoothie.js"></script>
 		<script src="three.js"></script>
+		<script src="Visual/Widget.js"></script>
 		<script src="Game.js"></script>
-		<script src="geometry.js"></script>
-
+		<script src="Logic/Widgets/LoaderWidget.js"></script>
+		<script src="Logic/Widgets/GameWidget.js"></script>
 		<style>
 			body {
 				color: #808080;
@@ -53,7 +54,14 @@
 			var container = document.getElementById('container');
 			Game.init(container);
 
+            //-------------------------------------------------------------------------------------
+            // Widgets
+            //-------------------------------------------------------------------------------------
 
+            Widget.addWidget("LoaderWidget", new LoaderWidget());
+            Widget.addWidget("GameWidget", new GameWidget());
+
+            Widget.showWidget("LoaderWidget");
 		};
 
     </script>
