--- a/space/bin/index.html
+++ b/space/bin/index.html
@@ -16,8 +16,8 @@
             exports = {};
 		</script>		
 	    
-	    <script src="pixi.js"></script>
-	    <script src="three.js"></script>
+	    <script src="pixi.min.js"></script>
+	    <script src="three.min.js"></script>
 	    <script data-main="main" src="require.js"></script>
 	    <script src="main.js"></script>
 		<style>
@@ -55,7 +55,7 @@
 				        'Game':'.' 
 				    }
 				});
-
+				
 				requirejs(["Game"], function(App) {
 				    console.log('starting application...');
 
